--- a/react-basic-app/src/index.css
+++ b/react-basic-app/src/index.css
@@ -34,10 +34,34 @@ a:hover{
   display: grid;
   grid-template-areas: 
   "header header2 header3";
-  color: white;
+  color: black;
   align-items: center;
   justify-content: space-between;
   padding: .1rem;
+}
+
+.cart-icon-items{
+  grid-area: header2;
+  display: flex;
+}
+.cart-icon{
+  background:transparent;
+  border: 0ch;
+  cursor: pointer;
+}
+
+.cart-items{
+  display: flex;
+  border-radius: 50%;
+  line-height: 10px;
+  width: 9px;
+  height: 9px;
+  padding: 3px;
+  background: red;
+  border: 0.5px solid #666;
+  color: black;
+  font-size: 10px ;
+
 }
 
 /* user combo list */
@@ -45,7 +69,7 @@ a:hover{
   grid-area: header3;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   margin-right: .5rem;
   max-width: 10rem;
 }
@@ -78,11 +102,33 @@ hr{
   flex-wrap: wrap;
   padding: .5rem;
 }
-.products img{
+
+.products li{
+  list-style-type: none;  
+}
+
+.products-img{
   display: flex;
   margin: .5rem;
-  max-width: 35rem;
-  max-height: 35rem;
+  max-width: 12rem;
+  max-height: 14rem;
+  transition: 0.2ms;
+}
+
+.products-img:hover{
+  transform: scale(1.2);
+}
+
+/* modal */
+.close-modal{
+  position: absolute;
+  right: 2%;
+  top: 5%;
+}
+
+.modal-details img{
+  max-width: 20rem;
+  max-height: 20rem;
 }
 
 /* footer */
